--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <main id="root">
-        <game-menu></game-menu>
-    </main>
-
+    <main id="root"></main>
 
     <script src="index.js" type="module"></script>
 </body>
