--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Other Cat</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="/assets/imgs/circulo.png" type="image/x-icon"/>
 </head>
 <body>
     <main id="root"></main>
-
+    
     <script src="index.js" type="module"></script>
 </body>
 </html>
