Comportamiento de casillas y texto

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Other Cat</title>
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="/assets/imgs/circulo.png" type="image/x-icon"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <main id="root"></main>
